fixing alignment in doctors

--- a/client-side(frontend)/lifebird/src/Components/diseasebackend.css
+++ b/client-side(frontend)/lifebird/src/Components/diseasebackend.css
@@ -174,6 +174,7 @@ image{
     display: flex; 
     background-color: rgb(191, 188, 188);
     margin-top: 5px;
+
 }
 .partone img{
     height:700px;
@@ -225,10 +226,10 @@ button{
  }
  .search-input input{
     height:50px;
-    width:1200px;
+    width:500px;
     margin-top:-100px;
     font-size: 20px;
-    margin-left: 350px;
+    margin-left: 650px;
     border-radius: 10px;
  }
 
